# BFS_Life_OOA

./: .env.example  Makefile  README.md  Team.md  project_charter.md  user_stories.md
.github/workflows/: ci.yml
Docs/: Design.md  Project_planning.md  deployment_runtime.md  home invertory usecase.uxf  requirements_engineering.md  smoke_settings.md  smoke_tests_and_defect_register.md
apps/backend/: Dockerfile  pyproject.toml
apps/backend/alembic/: env.py  script.py.mako
apps/backend/alembic/versions/: 659231255fd0_add_items_categories_warranties.py  6b5725b6e565_add_user_settings_fields.py  dec67de77b09_init.py  e8f4a1c2b3d4_auth_user_fields_and_item_owner.py
apps/backend/app/: main.py
apps/backend/app/api/: deps.py
apps/backend/app/api/v1/: router.py
apps/backend/app/api/v1/routes/: auth.py  categories.py  dashboard.py  items.py  settings.py
apps/backend/app/core/: config.py  security.py
apps/backend/app/db/: session.py
apps/backend/app/db/models/: __init__.py  category.py  item.py  user.py  warranty.py
apps/backend/app/repositories/: category_repo.py  item_repo.py  user_repository.py
apps/backend/app/schemas/: category.py  item.py  user.py
apps/backend/app/services/: auth_service.py  category_service.py  item_service.py
apps/backend/tests/: conftest.py  test_categories.py  test_health.py  test_settings.py
apps/backend/tests/integration/: test_api_auth_bfs.py  test_api_dashboard_bfs.py  test_api_items_bfs.py
apps/backend/tests/unit/: test_item_schema_bfs.py  test_security_bfs.py  test_user_schema_bfs.py
scripts/: bump_version.py
(+34 files in other folders)
