[tool.poetry]
name = "backend"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
sqlalchemy = "*"
asyncpg = "*"
alembic = "*"
pydantic-settings = "^2.13.1"
psycopg2-binary = "*"
ruff = "*"
pytest = "*"
httpx = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
